toList() is not modifiable. Switching back to collect()