@@ -2,10 +2,12 @@ package me.elsiff.morefish.item;
 
 import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import me.elsiff.morefish.MoreFish;
@@ -36,7 +38,7 @@ public interface FishItemStackConverter {
             Map<String, Object> replacement = getFormatReplacementMap(fish, length, catcher);
             GsonComponentSerializer gson = GsonComponentSerializer.gson();
             itemMeta.displayName(gson.deserialize(Lang.replace(getFormatConfig().map(cs -> cs.get("display-name").toString()).orElse("null"), replacement, catcher)));
-            List<Component> lore = Lang.replace(getFormatConfig().map(json -> json.getAsJsonArray("lore").asList().stream().map(JsonElement::toString).toList()).orElse(List.of()), replacement, catcher).stream().map(gson::deserialize).toList();
+            List<Component> lore = Lang.replace(getFormatConfig().map(json -> json.getAsJsonArray("lore").asList().stream().map(JsonElement::toString).toList()).orElse(new ArrayList<>()), replacement, catcher).stream().map(gson::deserialize).collect(Collectors.toList());
             List<Component> oldLore = itemMeta.lore();
             if (oldLore != null) {
                 lore.addAll(oldLore.stream().map(component -> {
